[gd_scene load_steps=9 format=2]

[ext_resource path="res://fonts/Graduate-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Menu/MainMenu.gd" type="Script" id=2]
[ext_resource path="res://fade_in/FadeIn.tscn" type="PackedScene" id=3]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 60
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 60
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 60
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 60
font_data = ExtResource( 1 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 121.189
margin_top = 80.0
margin_right = 1161.19
margin_bottom = 640.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 1040.0
margin_bottom = 560.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="LeftMenu" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
margin_right = 400.0
margin_bottom = 560.0
rect_min_size = Vector2( 400, 0 )
size_flags_vertical = 3
alignment = 1

[node name="PlayBtn" type="Button" parent="VBoxContainer/HBoxContainer/LeftMenu"]
margin_top = 55.0
margin_right = 400.0
margin_bottom = 115.0
rect_min_size = Vector2( 0, 60 )
custom_fonts/font = SubResource( 1 )
flat = true

[node name="PlayLbl" type="Label" parent="VBoxContainer/HBoxContainer/LeftMenu/PlayBtn"]
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color_shadow = Color( 0.14902, 0.552941, 0.278431, 1 )
custom_constants/shadow_offset_x = 5
custom_constants/shadow_offset_y = 5
text = "PLAY"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/HBoxContainer/LeftMenu"]
margin_top = 119.0
margin_right = 400.0
margin_bottom = 129.0
rect_min_size = Vector2( 0, 10 )
size_flags_horizontal = 3

[node name="MyTeamBtn" type="Button" parent="VBoxContainer/HBoxContainer/LeftMenu"]
margin_top = 133.0
margin_right = 400.0
margin_bottom = 193.0
rect_min_size = Vector2( 0, 60 )
flat = true

[node name="MyTeamLbl" type="Label" parent="VBoxContainer/HBoxContainer/LeftMenu/MyTeamBtn"]
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color_shadow = Color( 0.14902, 0.552941, 0.278431, 1 )
custom_constants/shadow_offset_x = 5
custom_constants/shadow_offset_y = 5
text = "MY TEAM"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer/HBoxContainer/LeftMenu"]
margin_top = 197.0
margin_right = 400.0
margin_bottom = 207.0
rect_min_size = Vector2( 0, 10 )
size_flags_horizontal = 3

[node name="MarketBtn" type="Button" parent="VBoxContainer/HBoxContainer/LeftMenu"]
margin_top = 211.0
margin_right = 400.0
margin_bottom = 271.0
rect_min_size = Vector2( 0, 60 )
flat = true

[node name="MarketLbl" type="Label" parent="VBoxContainer/HBoxContainer/LeftMenu/MarketBtn"]
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color_shadow = Color( 0.14902, 0.552941, 0.278431, 1 )
custom_constants/shadow_offset_x = 5
custom_constants/shadow_offset_y = 5
text = "MARKET"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer3" type="MarginContainer" parent="VBoxContainer/HBoxContainer/LeftMenu"]
margin_top = 275.0
margin_right = 400.0
margin_bottom = 285.0
rect_min_size = Vector2( 0, 10 )
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FriendsBtn" type="Button" parent="VBoxContainer/HBoxContainer/LeftMenu"]
margin_top = 289.0
margin_right = 400.0
margin_bottom = 349.0
rect_min_size = Vector2( 0, 60 )
flat = true

[node name="FriendsLbl" type="Label" parent="VBoxContainer/HBoxContainer/LeftMenu/FriendsBtn"]
margin_left = 1.18918
margin_right = 267.189
margin_bottom = 70.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color_shadow = Color( 0.14902, 0.552941, 0.278431, 1 )
custom_constants/shadow_offset_x = 5
custom_constants/shadow_offset_y = 5
text = "Friends"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer5" type="MarginContainer" parent="VBoxContainer/HBoxContainer/LeftMenu"]
margin_top = 353.0
margin_right = 400.0
margin_bottom = 363.0
rect_min_size = Vector2( 0, 10 )
size_flags_horizontal = 3

[node name="MeBtn" type="Button" parent="VBoxContainer/HBoxContainer/LeftMenu"]
margin_top = 367.0
margin_right = 400.0
margin_bottom = 427.0
rect_min_size = Vector2( 0, 60 )
flat = true

[node name="MeLbl" type="Label" parent="VBoxContainer/HBoxContainer/LeftMenu/MeBtn"]
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color_shadow = Color( 0.14902, 0.552941, 0.278431, 1 )
custom_constants/shadow_offset_x = 5
custom_constants/shadow_offset_y = 5
text = "ME"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer6" type="MarginContainer" parent="VBoxContainer/HBoxContainer/LeftMenu"]
margin_top = 431.0
margin_right = 400.0
margin_bottom = 441.0
rect_min_size = Vector2( 0, 10 )
size_flags_horizontal = 3

[node name="QuitBtn" type="Button" parent="VBoxContainer/HBoxContainer/LeftMenu"]
margin_top = 445.0
margin_right = 400.0
margin_bottom = 505.0
rect_min_size = Vector2( 60, 60 )
flat = true

[node name="QuitLbl" type="Label" parent="VBoxContainer/HBoxContainer/LeftMenu/QuitBtn"]
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color_shadow = Color( 0.14902, 0.552941, 0.278431, 1 )
custom_constants/shadow_offset_x = 5
custom_constants/shadow_offset_y = 5
text = "QUIT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RightMenu" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 404.0
margin_right = 404.0
margin_bottom = 560.0

[node name="FadeIn" parent="." instance=ExtResource( 3 )]
visible = false
[connection signal="pressed" from="VBoxContainer/HBoxContainer/LeftMenu/PlayBtn" to="." method="_on_PlayBtn_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/LeftMenu/MyTeamBtn" to="." method="_on_MyTeamBtn_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/LeftMenu/MarketBtn" to="." method="_on_MarketBtn_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/LeftMenu/FriendsBtn" to="." method="_on_FriendsBtn_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/LeftMenu/QuitBtn" to="." method="_on_QuitBtn_pressed"]
[connection signal="fade_finished" from="FadeIn" to="." method="_on_FadeIn_fade_finished"]
